--- a/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
@@ -1,6 +1,10 @@
 <form class="card bg-dark text-light" [formGroup]="roomForm">
     <div class="card-body">
         <div class="mb-3">
+            <label class="form-label">Numero de Sala</label>
+            <input type="text" class="form-control" formControlName="roomNum">
+        </div>
+        <div class="mb-3">
             <label class="form-label">Cantidad Filas</label>
             <input type="number" class="form-control" formControlName="nRows">
         </div>
@@ -11,10 +15,6 @@
         <div class="mb-3">
             <label class="form-label">Precio de la Entrada</label>
             <input type="number" class="form-control" formControlName="price">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Numero de Sala</label>
-            <input type="number" class="form-control" formControlName="roomNum">
         </div>
     </div>
     <div class="card-footer">
