--- a/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
@@ -1,12 +1,12 @@
 <div class="row mb-3">
-    <h1>SALAS</h1>
+    <h1>Salas</h1>
 </div>
 
 <div class="row">
-    <div class="col-3">
+    <div class="col-4">
         <app-room-form></app-room-form>        
     </div>
-    <div class="col-9">
+    <div class="col-8">
         <app-room-table></app-room-table>
     </div>
 </div>
