metodo de registro de usuario creado usando servicio cc

--- a/frontend/src/app/modules/management/pages/users/components/user-form/user-form.component.html
+++ b/frontend/src/app/modules/management/pages/users/components/user-form/user-form.component.html
@@ -32,7 +32,7 @@
     <div class="card-footer">
         <div class="d-flex justify-content-around">
             <button (click)="handleSubmit()" class="btn btn-primary">Guardar</button>
-            <button class="btn btn-danger">Cancelar</button>
+            <button (click)="handleCancel()" class="btn btn-danger">Cancelar</button>
         </div>
     </div>
 </form>
