--- a/frontend/src/app/modules/management/pages/users/users.component.html
+++ b/frontend/src/app/modules/management/pages/users/users.component.html
@@ -3,6 +3,10 @@
 </div>
 
 <div class="row">
-    <div class="col-4"><app-user-form></app-user-form></div>
-    <div class="col-8"><app-user-table></app-user-table></div>
+    <div class="col-4">
+        <app-user-form (createUser)="createUser($event)"></app-user-form>
+    </div>
+    <div class="col-8">
+        <app-user-table [users]="users"></app-user-table>
+    </div>
 </div>
