navbar migrada a primeng menubar cc

--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar bg-danger mb-4">
-    <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1 text-light">MovieCorp</span>
-    </div>
-</nav>
+<p-menubar styleClass="bg-red-600 h-4rem mb-3">
+    <ng-template pTemplate="start">
+        <h2 class="text-900">MovieCorp</h2>
+    </ng-template>
+</p-menubar>
