hu14/backend conexion con la base de datos

--- a/frontend/src/app/modules/admin/pages/cinemas/cinemas.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/cinemas.component.html
@@ -1,11 +1,12 @@
 <div class="row mb-3">
     <h1>Cines</h1>
 </div>
+
 <div class="row">
     <div class="col-4">
-        <app-cinema-form></app-cinema-form>
+        <app-cinema-form (createCinema)="createCinema($event)"></app-cinema-form>
     </div>
     <div class="col-8">
-        <app-cinema-table></app-cinema-table>
+        <app-cinema-table [cinemas]="cinemas"></app-cinema-table>
     </div>
 </div>
