hu14/boton de cancelar del formulario VC

--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
@@ -12,7 +12,7 @@
     <div class="card-footer">
         <div class="d-flex justify-content-around">
             <button (click)="handleSubmit()" class="btn btn-primary">Ingresar</button>
-            <button class="btn btn-danger">Cancelar</button>
+            <button (click)="handleCancel()" class="btn btn-danger">Cancelar</button>
         </div>
     </div>
 </form>
