--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
@@ -18,7 +18,7 @@
             <td>19</td>
             <td>
                 <button class="btn btn-success me-4">Editar</button>
-                <button class="btn btn-danger">Eliminar</button>
+                <button (click)="handleDelete(cinema._id)" class="btn btn-danger">Eliminar</button>
             </td>
         </tr>
     </tbody>
