--- a/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
+++ b/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
@@ -17,7 +17,7 @@
             <td>{{user.phone}}</td>
             <td>{{user.email}}</td>
             <td>
-                <button class="btn btn-success me-4">Editar</button>
+                <button (click)="handleEdit(user)" class="btn btn-success me-4">Editar</button>
                 <button (click)="handleDelete(user._id)" class="btn btn-danger">Eliminar</button>
             </td>
         </tr>
