--- a/frontend/src/app/modules/management/pages/users/users.component.html
+++ b/frontend/src/app/modules/management/pages/users/users.component.html
@@ -4,9 +4,10 @@
 
 <div class="row">
     <div class="col-4">
-        <app-user-form (createUser)="createUser($event)"></app-user-form>
+        <app-user-form (editUser)="updateUser($event)" (createUser)="createUser($event)"></app-user-form>
     </div>
     <div class="col-8">
-        <app-user-table (deleteUser)="deleteUser($event)" [users]="users"></app-user-table>
+        <app-user-table (editUser)="fillUserForm($event)" (deleteUser)="deleteUser($event)" [users]="users">
+        </app-user-table>
     </div>
 </div>
