--- a/frontend/src/app/modules/admin/pages/cinemas/cinemas.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/cinemas.component.html
@@ -4,9 +4,9 @@
 
 <div class="row">
     <div class="col-4">
-        <app-cinema-form (createCinema)="createCinema($event)"></app-cinema-form>
+        <app-cinema-form (editCinema)="updateCinema($event)" (createCinema)="createCinema($event)"></app-cinema-form>
     </div>
     <div class="col-8">
-        <app-cinema-table [cinemas]="cinemas" (deletCinema)="deleteCinema($event)"></app-cinema-table>
+        <app-cinema-table (editCinema)="fileCinemaForm($event)" (deletCinema)="deleteCinema($event)" [cinemas]="cinemas"></app-cinema-table>
     </div>
 </div>
