--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
@@ -14,10 +14,10 @@
             <th scope="row">{{i+1}}</th>
             <td>{{cinema.name}}</td>
             <td>{{cinema.address}}</td>
-            <td>15</td>
-            <td>19</td>
+            <td>0</td>
+            <td>0</td>
             <td>
-                <button class="btn btn-success me-4">Editar</button>
+                <button (click)="handleEdit(cinema)" class="btn btn-success me-4">Editar</button>
                 <button (click)="handleDelete(cinema._id)" class="btn btn-danger">Eliminar</button>
             </td>
         </tr>
