HU19/registro de salas VC

--- a/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
@@ -19,8 +19,8 @@
     </div>
     <div class="card-footer">
         <div class="d-flex justify-content-around">
-            <div (click)="handleSubmit()" class="btn btn-primary">Ingresar</div>
-            <button class="btn btn-danger">Cancelar</button>
+            <button (click)="handleSubmit()" class="btn btn-primary">Ingresar</button>
+            <button (click)="handleCancel()" class="btn btn-danger">Cancelar</button>
         </div>
     </div>
 </form>
