hu24 eliminacion de salas VC

--- a/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
@@ -18,7 +18,7 @@
             <td>{{room.price}}</td>
             <td>
                 <button class="btn btn-success me-4">Editar</button>
-                <button class="btn btn-danger">Eliminar</button>
+                <button (click)="handleDelete(room._id)" class="btn btn-danger">Eliminar</button>
             </td>
         </tr>
     </tbody>
