hu22, registro y lectura de peliculas creadas cc

--- a/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
@@ -13,6 +13,10 @@
             <input type="text" formControlName="genre" class="form-control">
         </div>
         <div class="mb-3">
+            <label class="form-label">Clasificacion</label>
+            <input type="text" formControlName="rating" class="form-control">
+        </div>
+        <div class="mb-3">
             <label class="form-label">Duracion</label>
             <input type="text" formControlName="length" class="form-control">
         </div>
@@ -26,7 +30,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Portada</label>
-            <input type="file" formControlName="image" class="form-control">
+            <input type="file" formControlName="imageSrc" (change)="onFileChange($event)" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">Trailer</label>
