--- a/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
@@ -18,7 +18,7 @@
             <td>{{movie.length}}</td>
             <td>
                 <button class="btn btn-success me-4">Editar</button>
-                <button class="btn btn-danger">Eliminar</button>
+                <button (click)="handleDelete(movie._id) " class="btn btn-danger">Eliminar</button>
             </td>
         </tr>
     </tbody>
