--- a/frontend/src/app/modules/admin/pages/movies/movies.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/movies.component.html
@@ -7,6 +7,6 @@
         <app-movie-form (createMovie)="createMovie($event)"></app-movie-form>
     </div>
     <div class="col-8">
-        <app-movie-table [movies]="movies"></app-movie-table>
+        <app-movie-table (deleteMovie)="deleteMovie($event)" [movies]="movies"></app-movie-table>
     </div>
 </div>
