--- a/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
@@ -17,7 +17,7 @@
             <td>{{room.nCol}}</td>
             <td>{{room.price}}</td>
             <td>
-                <button class="btn btn-success me-4">Editar</button>
+                <button (click)="handleEdit(room)" class="btn btn-success me-4">Editar</button>
                 <button (click)="handleDelete(room._id)" class="btn btn-danger">Eliminar</button>
             </td>
         </tr>
