--- a/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-form/movie-form.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Duracion</label>
-            <input type="text" formControlName="length" class="form-control">
+            <input type="number" formControlName="length" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">Protagonistas</label>
