--- a/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
@@ -17,7 +17,7 @@
             <td>{{movie.rating}}</td>
             <td>{{movie.length}}</td>
             <td>
-                <button class="btn btn-success me-4">Editar</button>
+                <button (click)="handleEdit(movie)" class="btn btn-success me-4">Editar</button>
                 <button (click)="handleDelete(movie._id) " class="btn btn-danger">Eliminar</button>
             </td>
         </tr>
