--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,21 @@
-<nav class="navbar bg-danger mb-4">
+<nav class="navbar navbar-expand bg-danger mb-4">
     <div class="container-fluid">
         <span class="navbar-brand mb-0 h1 text-light">MovieCorp</span>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a routerLink="/admin/cinemas" class="mx-2 btn btn-sm btn-outline-light">Cines</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/admin/rooms" class="mx-2 btn btn-sm btn-outline-light">Salas</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/admin/movies" class="mx-2 btn btn-sm btn-outline-light">Peliculas</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/management/users" class="mx-2 btn btn-sm btn-outline-light">Usuarios</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
