--- a/frontend/src/app/modules/management/pages/users/users.component.html
+++ b/frontend/src/app/modules/management/pages/users/users.component.html
@@ -1,13 +1,14 @@
-<div class="row mb-3">
-    <h1>Administradores</h1>
-</div>
+<h1>Administradores</h1>
 
-<div class="row">
-    <div class="col-4">
-        <app-user-form (editUser)="updateUser($event)" (createUser)="createUser($event)"></app-user-form>
-    </div>
-    <div class="col-8">
-        <app-user-table (editUser)="fillUserForm($event)" (deleteUser)="deleteUser($event)" [users]="users">
-        </app-user-table>
-    </div>
+<div class="card">
+    <p-toolbar styleClass="mb-4">
+        <ng-template pTemplate="left">
+            <p-button label="Nuevo usuario" (onClick)="openForm()" iconPos="right" icon="pi pi-plus" styleClass="p-button-primary"></p-button>
+        </ng-template>
+    </p-toolbar>
+
+    <app-user-table (editUser)="fillUserForm($event)" (deleteUser)="deleteUser($event)" [users]="users">
+    </app-user-table>
+
+    <app-user-form (createUser)="createUser($event)" [showForm]="showForm" (closeForm)="closeForm()"></app-user-form>
 </div>
