--- a/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
+++ b/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
@@ -1,29 +1,3 @@
-<!-- <table class="table table-striped">
-    <thead class="table table-dark">
-        <tr>
-            <td scope="col">Nro</td>
-            <td scope="col">Nombre</td>
-            <td scope="col">Apellidos</td>
-            <td scope="col">Telefono</td>
-            <td scope="col">Email</td>
-            <td scope="col">Opciones</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let user of users; index as i">
-            <th scope="row">{{ i + 1 }}</th>
-            <td>{{user.name}}</td>
-            <td>{{user.lastnames}}</td>
-            <td>{{user.phone}}</td>
-            <td>{{user.email}}</td>
-            <td>
-                <button (click)="handleEdit(user)" class="btn btn-success me-4">Editar</button>
-                <button (click)="handleDelete(user._id)" class="btn btn-danger">Eliminar</button>
-            </td>
-        </tr>
-    </tbody>
-</table> -->
-
 <p-table [value]="users" [rows]="10" [paginator]="true" responsiveLayout="scroll" [rowHover]="true">
     <ng-template pTemplate="header">
         <tr>
@@ -45,7 +19,7 @@
             <td class="flex">
                 <p-button label="Editar" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
-                <p-button label="Eliminar" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
+                <p-button label="Eliminar" (onClick)="handleDelete(user._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
                 </p-button>
             </td>
         </tr>
