--- a/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
+++ b/frontend/src/app/modules/management/pages/users/components/user-table/user-table.component.html
@@ -6,6 +6,7 @@
             <th>Apellidos</th>
             <th>Telefono</th>
             <th>Email</th>
+            <th>Rol</th>
             <th>Opciones</th>
         </tr>
     </ng-template>
@@ -16,8 +17,9 @@
             <td>{{user.lastnames}}</td>
             <td>{{user.phone}}</td>
             <td>{{user.email}}</td>
+            <td>{{user.rol}}</td>
             <td class="flex">
-                <p-button label="Editar" iconPos="right" icon="pi pi-pencil"
+                <p-button label="Editar" (onClick)="handleEdit(user)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
                 <p-button label="Eliminar" (onClick)="handleDelete(user._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
                 </p-button>
