--- a/frontend/src/app/modules/admin/pages/movies/movies.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/movies.component.html
@@ -1,13 +1,14 @@
-<div class="row mb-3">
-    <h1>Peliculas</h1>
-</div>
+<h1>Peliculas</h1>
 
-<div class="row">
-    <div class="col-4">
-        <app-movie-form (createMovie)="createMovie($event)" (updateMovie)="updateMovie($event)"></app-movie-form>
-    </div>
-    <div class="col-8">
-        <app-movie-table (editMovie)="fillMovieForm($event)" (deleteMovie)="deleteMovie($event)" [movies]="movies">
-        </app-movie-table>
-    </div>
+<div class="card">
+    <p-toolbar styleClass="mb-4">
+        <ng-template pTemplate="left">
+            <p-button label="Nueva pelicula" (onClick)="openForm()" iconPos="right" icon="pi pi-plus"
+                styleClass="p-button-primary"></p-button>
+        </ng-template>
+    </p-toolbar>
+
+    <app-movie-table [movies]="movies"></app-movie-table>
+
+    <app-movie-form [showForm]="showForm" (closeForm)="closeForm()"></app-movie-form>
 </div>
