--- a/frontend/src/app/modules/admin/pages/movies/movies.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/movies.component.html
@@ -10,5 +10,7 @@
 
     <app-movie-table [movies]="movies"></app-movie-table>
 
-    <app-movie-form [showForm]="showForm" (closeForm)="closeForm()"></app-movie-form>
+    <app-movie-form [showForm]="showForm" (createMovie)="createMovie($event)" (closeForm)="closeForm()"></app-movie-form>
 </div>
+
+<p-toast></p-toast>
