--- a/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
@@ -1,7 +1,4 @@
-<div class="row mb-3">
-    <h1>Salas</h1>
-</div>
-
+<h1>Salas asda</h1>
 <div class="row">
     <div class="col-4">
         <app-room-form (editRoom)="updateRoom($event)" (createRoom)="createRooms($event)"></app-room-form>        
