--- a/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
@@ -1,26 +1,27 @@
-<form class="card bg-dark text-light" [formGroup]="roomForm">
-    <div class="card-body">
-        <div class="mb-3">
-            <label class="form-label">Numero de Sala</label>
-            <input type="text" class="form-control" formControlName="roomNum">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Cantidad Filas</label>
-            <input type="number" class="form-control" formControlName="nRows">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Cantidad Columnas</label>
-            <input type="number" class="form-control" formControlName="nCol">
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Precio de la Entrada</label>
-            <input type="number" class="form-control" formControlName="price">
-        </div>
-    </div>
-    <div class="card-footer">
-        <div class="d-flex justify-content-around">
-            <button (click)="handleSubmit()" class="btn btn-primary">Ingresar</button>
-            <button (click)="handleCancel()" class="btn btn-danger">Cancelar</button>
-        </div>
-    </div>
-</form>
+<p-dialog [(visible)]="showForm" [style]="{width: '550px'}" header="Nuevo usuario" [modal]="true" styleClass="p-fluid"
+    [draggable]="false" (onShow)="onShow()" (onHide)="closeDialog()">
+    <ng-template pTemplate="content">
+        <form [formGroup]="roomForm">
+            <div class="field">
+                <h4>Numero de Sala</h4>
+                <input type="text" pInputText formControlName="rommNum">
+            </div>
+            <div class="field">
+                <h4>Cantidad Filas</h4>
+                <p-inputNumber formControlName="nRows" [useGrouping]="false"></p-inputNumber>
+            </div>
+            <div class="field">
+                <h4>Cantidad Columnas</h4>
+                <p-inputNumber formControlName="nCol" [useGrouping]="false"></p-inputNumber>
+            </div>
+            <div class="field">
+                <h4>Precio de la Entrada</h4>
+                <p-inputNumber formControlName="price" mode="currency" currency="BOB" locale="es-BO" [useGrouping]="false"></p-inputNumber>
+            </div>
+        </form>
+    </ng-template>
+    <ng-template pTemplate="footer">
+        <p-button label="Cancelar" (onClick)="closeDialog()" styleClass="p-button-danger"></p-button>
+        <p-button label="Guardar" styleClass="p-button-primary"></p-button>
+    </ng-template>
+</p-dialog>
