--- a/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
@@ -1,9 +1,18 @@
-<h1>Salas asda</h1>
-<div class="row">
-    <div class="col-4">
-        <app-room-form (editRoom)="updateRoom($event)" (createRoom)="createRooms($event)"></app-room-form>        
-    </div>
-    <div class="col-8">
-        <app-room-table (editRoom)="fillRoomForm($event)" (deleteRoom)="deleteRoom($event)" [rooms]="rooms"></app-room-table>
-    </div>
+<h1>Salas</h1>
+
+<div class="card">
+    <p-toolbar styleClass="mb-4">
+        <ng-template pTemplate="left">
+            <p-button label="Nueva Sala" (onClick)="openForm()" iconPos="right" icon="pi pi-plus"
+                styleClass="p-button-primary"></p-button>
+        </ng-template>
+    </p-toolbar>
+
+    <app-room-table [rooms]="rooms">
+    </app-room-table>
+
+    <app-room-form 
+        [showForm]="showForm" 
+        (closeForm)="closeForm()"
+    ></app-room-form>
 </div>
