--- a/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="movies" [rows]="10" [paginator]="true" responsiveLayout="scroll" [rowHover]="true">
+<p-table [value]="movies" [rows]="5" [paginator]="true" responsiveLayout="scroll" [rowHover]="true">
     <ng-template pTemplate="header">
         <tr>
             <th>Nro</th>
@@ -21,7 +21,7 @@
             <td>
                 <p-button label="Editar" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
-                <p-button label="Eliminar" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
+                <p-button label="Eliminar" (onClick)="handleDelete(movie._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
                 </p-button>
             </td>
         </tr>
