--- a/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
+++ b/frontend/src/app/modules/admin/pages/movies/components/movie-table/movie-table.component.html
@@ -14,14 +14,17 @@
         <tr>
             <td>{{movies.indexOf(movie)+1}}</td>
             <td>{{movie.title}}</td>
-            <td><p-image [src]="'http://localhost:4000/' + movie.imagePath" height="150" [preview]="true"></p-image></td>
+            <td>
+                <p-image [src]="'http://localhost:4000/' + movie.imagePath" height="150" [preview]="true"></p-image>
+            </td>
             <td>{{movie.genre}}</td>
             <td>{{movie.rating}}</td>
             <td>{{movie.length}}</td>
             <td>
-                <p-button label="Editar" iconPos="right" icon="pi pi-pencil"
+                <p-button label="Editar" (onClick)="handleEdit(movie)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
-                <p-button label="Eliminar" (onClick)="handleDelete(movie._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
+                <p-button label="Eliminar" (onClick)="handleDelete(movie._id)" iconPos="right" icon="pi pi-trash"
+                    styleClass="p-button-sm p-button-danger">
                 </p-button>
             </td>
         </tr>
