--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-form/cinema-form.component.html
@@ -14,6 +14,6 @@
     </ng-template>
     <ng-template pTemplate="footer">
         <p-button label="Cancelar" (onClick)="closeDialog()" styleClass="p-button-danger"></p-button>
-        <p-button label="Guardar" styleClass="p-button-primary"></p-button>
+        <p-button label="Guardar" (onClick)="handleSubmit()" styleClass="p-button-primary"></p-button>
     </ng-template>
 </p-dialog>
