--- a/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
@@ -14,5 +14,7 @@
     <app-room-form 
         [showForm]="showForm" 
         (closeForm)="closeForm()"
+        (createRoom)="createRoom($event)"
     ></app-room-form>
 </div>
+<p-toast></p-toast>
