--- a/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-form/room-form.component.html
@@ -1,7 +1,12 @@
-<p-dialog [(visible)]="showForm" [style]="{width: '550px'}" header="Nuevo usuario" [modal]="true" styleClass="p-fluid"
+<p-dialog [(visible)]="showForm" [style]="{width: '550px'}" header="Nueva sala" [modal]="true" styleClass="p-fluid"
     [draggable]="false" (onShow)="onShow()" (onHide)="closeDialog()">
     <ng-template pTemplate="content">
         <form [formGroup]="roomForm">
+            <div class="field">
+                <h4>Cine</h4>
+                <p-dropdown placeholder="Seleccione el cine correspondiente" [options]="cinemas" optionLabel="name"
+                    optionValue="_id" formControlName="cinema_id"></p-dropdown>
+            </div>
             <div class="field">
                 <h4>Numero de Sala</h4>
                 <input type="text" pInputText formControlName="roomNum">
@@ -16,7 +21,8 @@
             </div>
             <div class="field">
                 <h4>Precio de la Entrada</h4>
-                <p-inputNumber formControlName="price" mode="currency" currency="BOB" locale="es-BO" [useGrouping]="false"></p-inputNumber>
+                <p-inputNumber formControlName="price" mode="currency" currency="BOB" locale="es-BO"
+                    [useGrouping]="false"></p-inputNumber>
             </div>
         </form>
     </ng-template>
