--- a/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
@@ -11,10 +11,7 @@
     <app-room-table [rooms]="rooms">
     </app-room-table>
 
-    <app-room-form 
-        [showForm]="showForm" 
-        (closeForm)="closeForm()"
-        (createRoom)="createRoom($event)"
-    ></app-room-form>
+    <app-room-form [showForm]="showForm" (closeForm)="closeForm()" (createRoom)="createRoom($event)"
+        [cinemas]="cinemas"></app-room-form>
 </div>
 <p-toast></p-toast>
