--- a/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/components/room-table/room-table.component.html
@@ -16,7 +16,7 @@
             <td>{{room.nCol}}</td>
             <td>Bs {{room.price}}</td>
             <td>
-                <p-button label="Editar" iconPos="right" icon="pi pi-pencil"
+                <p-button label="Editar" (onClick)="handleEdit(room)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
                 <p-button label="Eliminar" (onClick)="handleDelete(room._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
                 </p-button>
