--- a/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
+++ b/frontend/src/app/modules/admin/pages/rooms/rooms.component.html
@@ -8,11 +8,17 @@
         </ng-template>
     </p-toolbar>
 
-    <app-room-table [rooms]="rooms" (deleteRoom)="confirmDelete($event)">
+    <app-room-table [rooms]="rooms" (deleteRoom)="confirmDelete($event)" (editRoom)="fillRoomForm($event)">
     </app-room-table>
 
-    <app-room-form [showForm]="showForm" (closeForm)="closeForm()" (createRoom)="createRoom($event)"
-        [cinemas]="cinemas"></app-room-form>
+    <app-room-form 
+        [cinemas]="cinemas"
+        [showForm]="showForm" 
+        (closeForm)="closeForm()" 
+        (createRoom)="createRoom($event)"
+        (editRoom)="updateRoom($event)"
+        [handleRoom]="handleRoom"
+    ></app-room-form>
 </div>
 <p-confirmDialog [style]="{width: '450px'}" rejectButtonStyleClass="p-button-danger" acceptLabel="Si"></p-confirmDialog>
 <p-toast></p-toast>
