--- a/frontend/src/app/modules/admin/pages/cinemas/cinemas.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/cinemas.component.html
@@ -8,12 +8,15 @@
         </ng-template>
     </p-toolbar>
 
-    <app-cinema-table [cinemas]="cinemas" (deletCinema)="confirmDelete($event)">
+    <app-cinema-table [cinemas]="cinemas" (deletCinema)="confirmDelete($event)" (editCinema)="fillCinemaForm($event)">
     </app-cinema-table>
+    
     <app-cinema-form 
         (createCinema)="createCinema($event)" 
         [showForm]="showForm"
         (closeForm)="closeForm()"
+        (editCinema)="updateCinema($event)"
+        [handleCinema]="handleCinema"
     ></app-cinema-form>
 </div>
 <p-confirmDialog [style]="{width: '400px'}" rejectButtonStyleClass="p-button-danger" acceptLabel="Si"></p-confirmDialog>
