--- a/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
+++ b/frontend/src/app/modules/admin/pages/cinemas/components/cinema-table/cinema-table.component.html
@@ -16,7 +16,7 @@
             <td>0</td>
             <td>0</td>
             <td class="flex">
-                <p-button label="Editar" iconPos="right" icon="pi pi-pencil"
+                <p-button label="Editar" (onClick)="handleEdit(cinema)" iconPos="right" icon="pi pi-pencil"
                     styleClass="p-button-sm p-button-success mr-2"></p-button>
                 <p-button label="Eliminar" (onClick)="handleDelete(cinema._id)" iconPos="right" icon="pi pi-trash" styleClass="p-button-sm p-button-danger">
                 </p-button>
